<?xml version="1.0"?>
<package format="2">
  <name>costmap_cspace_rviz_plugins</name>
  <version>0.11.6</version>
  <description>Rviz plugins for costmap_cspace_msgs</description>
  <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
  <license>BSD</license>
  <author email="nhatao@seqsense.com">Naotaka Hatao</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>costmap_cspace_msgs</depend>
  <depend>rviz</depend>

  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>
  <depend>qtbase5-dev</depend>

  <test_depend>roslint</test_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
